--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,7 +1,9 @@
+/* makes sure everything is the full page height */
 html, body {
   height: 100%;
 }
 
+/* header section */
 header {
   height: 25%;
   width: 85%;
@@ -10,12 +12,14 @@ header {
 
 }
 
+/* heading */
 .display-3 {
   font-size: auto;
   font-weight: 600;
   font-family: sans-serif;
 }
 
+/* save all and clear all btn area */
 .allBtn {
   width: 15%;
   display: flex;
@@ -26,6 +30,7 @@ header {
   justify-content: center;
 }
 
+/* save all and clear all btn */
 .allBtn button {
   height: 20%;
   width: 50%;
@@ -34,6 +39,7 @@ header {
   border-radius: 20px;
 }
 
+/* sheduler section */
 main {
   display: flex;
   height: 70%;
@@ -41,21 +47,14 @@ main {
   width: 80%;
   margin: 0 auto;
 }
-
+/* page basics */
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1;
 }
 
-textarea {
-  background: transparent;
-  border: none;
-  resize: none;
-  color: #000000;
-  border-left: 1px solid black;
-}
-
+/* header decoration */
 .jumbotron {
   text-align: center;
   background-color: transparent;
@@ -64,15 +63,7 @@ textarea {
   border-bottom: 10px solid black;
 }
 
-.description {
-  white-space: pre-wrap;
-}
-
-.time-block {
-  text-align: center;
-  border-radius: 15px;
-}
-
+/* row placement and decoration */
 .rows {
   display: inline-flex;
   flex-direction: row;
@@ -84,6 +75,7 @@ textarea {
   border-top: 1px solid white;
 }
 
+/* time section */
 .hour {
   display: flex;
   flex-direction: column;
@@ -95,12 +87,15 @@ textarea {
   border-left: 1px dashed #000000;
   justify-content: center;
 }
+
+/* time text */
 .hour p {
   text-align: center;
   height: fit-content;
   margin: 0;
 }
 
+/* task area */
 .task {
   width: 80%;
   background-color: #ffffff;
@@ -110,11 +105,13 @@ textarea {
   border-right: 1px dashed #000000;
 }
 
+/* task area */
 .task input {
   width: 100%;
   border: 0px solid black;
 }
 
+/* submit area */
 .submit {
   width: 10%;
   background-color: #ffffff;
@@ -125,27 +122,32 @@ textarea {
   justify-content: center;
 }
 
+/* submit button */
 .submit button {
   height: 50%;
   margin-top: auto;
   margin-bottom: auto;
 }
 
+/* time color */
 .past {
   background-color: rgb(162, 162, 162);
   color: white;
 }
 
+/* time color */
 .present {
   background-color: #ff6961;
   color: white;
 }
 
+/* time color */
 .future {
   background-color: #77dd77;
   color: white;
 }
 
+/* save button decoration */
 .saveBtn {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
@@ -154,12 +156,13 @@ textarea {
   color: white;
 }
 
+/* on save button hover */
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
 
-
+/* make text smaller so it fits */
 @media screen and (max-width: 900px) {
   .display-3 {
     font-size: 40px;
